@@ -1,4 +1,4 @@
-{% load i18n l10n humanize sekizai_tags switzerland %}
+{% load i18n l10n humanize sekizai_tags switzerland countdowntimer %}
   {% addtoblock "js" %}
 <script src="{{ transaction.script_url }}"></script>
 <script>
@@ -12,7 +12,13 @@
 </script>
 {% endaddtoblock %}
 <div class="hidden-print d-print-none text-center mt-3 mb-3" style="margin-top: 1em; margin-bottom: 2em">
-
+{% if REGISTRATION_EXPIRE_MINUTES %}
+  <div>
+  {% blocktrans with minutes=REGISTRATION_EXPIRE_MINUTES|human_readable_time %}
+  Your registrations are reserved for the next {{ minutes }}. If payment is not received within this time, your
+  registration will be cancelled and your place will be made available again.{% endblocktrans %}
+  </div>
+{% endif %}
 <button id="pay-button" class="btn btn-lg btn-success">
   <i class="icon-credit-card-1"></i> &nbsp;{% trans "Pay" %}
 </button>
